--- a/index.html
+++ b/index.html
@@ -198,13 +198,13 @@
     <div class="container">
       <div class="mockup-section full-width">
         <div class="mockup-desktop">
-          <img src="untitled design 1.jpg" alt="ElderLink Dashboard on Desktop" class="mockup-image">
+          <img src="untitled design 1.png" alt="ElderLink Dashboard on Desktop" class="mockup-image">
         </div>
       </div>
 
       <div class="mockup-section reversed">
         <div class="mockup-phone">
-          <img src="untitled design 3.jpg" alt="ElderLink Mobile App" class="mockup-image">
+          <img src="untitled design 3.png" alt="ElderLink Mobile App" class="mockup-image">
         </div>
         <div class="mockup-content">
           <h2>AI Wi-Fi Detection</h2>
@@ -214,7 +214,7 @@
 
       <div class="mockup-section">
         <div class="mockup-phone">
-          <img src="untitled design 2.jpg" alt="ElderLink Behavioral Insights" class="mockup-image">
+          <img src="untitled design 2.png" alt="ElderLink Behavioral Insights" class="mockup-image">
         </div>
         <div class="mockup-content">
           <h2>Behavioral Modeling</h2>
