--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- Hero Section with Background Image -->
   <section class="hero" id="home" style="padding-top: 100px; min-height: 90vh; display: flex; align-items: center; position: relative;">
     <!-- Background Image -->
-    <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url('untitled.jpg'); background-size: cover; background-position: center; opacity: 0.3; z-index: -1;"></div>
+    <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url('untitled.png'); background-size: cover; background-position: center; opacity: 0.3; z-index: -1;"></div>
     
     <div class="container">
       <!-- Hero Content -->
