--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <!-- Mockup 1: Mac Image -->
       <div class="mockup-item full-width">
         <div class="mockup-image">
-          <img src="untitled 1.png" alt="ElderLink Dashboard on Mac" class="transparent-img">
+          <img src="untitled design 1.png" alt="ElderLink Dashboard on Mac" class="transparent-img">
         </div>
       </div>
       
@@ -172,14 +172,14 @@
           <p>ElderLink utilizes AI WiFi detection to monitor residents' behavior in real time.</p>
         </div>
         <div class="mockup-image">
-          <img src="untitled 3.png" alt="AI Wi-Fi Detection" class="transparent-img">
+          <img src="untitled design 3.png" alt="AI Wi-Fi Detection" class="transparent-img">
         </div>
       </div>
       
       <!-- Mockup 3: Behavioral Modeling -->
       <div class="mockup-item reverse">
         <div class="mockup-image">
-          <img src="untitled 2.png" alt="Behavioral Modeling" class="transparent-img">
+          <img src="untitled design 2.png" alt="Behavioral Modeling" class="transparent-img">
         </div>
         <div class="mockup-text">
           <h3 class="blue-heading">Behavioral Modeling</h3>
